- Fix for scrollbar styling and overflow issues

--- a/VersaStack-web/src/main/webapp/css/graphTest.css
+++ b/VersaStack-web/src/main/webapp/css/graphTest.css
@@ -19,7 +19,7 @@ html{
     height: calc(100% - 37px);
     top: 37px;
     width: 25%;
-    position: absolute;
+    position: fixed;
     right: -25%;
     /*overflow: scroll; */
     z-index: 3;
@@ -43,14 +43,21 @@ html{
 
 #displayPanel-tab {    
     position: absolute;
-    right: 100%;
+    right: 0px;
     height: 100%;
     width: 10px;
-    background-color: black;
+    background-color: #555;
     z-index: 5;
     
-    -webkit-transition: transform 1s ease-in-out;
-    transition: transform 1s ease-in-out;
+    -webkit-transition: right 0.5s ease-in-out;
+    transition: right 0.5s ease-in-out;
+}
+
+#displayPanel-tab.display-open {    
+    right: 25%;
+    
+    -webkit-transition: right 0.5s ease-in-out;
+    transition: right 0.5s ease-in-out;
 }
 
 #displayPanel-actions {    
